--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,13 @@
 * {
     box-sizing: border-box;
     font-family: 'Raleway';
+    scroll-behavior: smooth;
+    scrollbar-width: none;
 }
 
 body {
     margin: 0;
-    background-color: #f0f0f0;
+    background-color: white;
 }
 
 .header {
@@ -117,7 +119,7 @@ body {
     text-align: center;
     position: relative;
     width: 100%;
-    height: auto;
+    height: 90vh;
 }
 
 #Home .background img {
@@ -137,7 +139,6 @@ body {
     flex-direction: column;
     justify-content: center;
     position: center;
-    margin-top: 40vh;
 }
 
 #Home .home-content h1 {
@@ -167,6 +168,11 @@ body {
     font-weight: 700;
     letter-spacing: 3px;
     margin-top: 20px;
+    transition: 0.3s ease-in-out;
+}
+
+#Home .home-content a:hover {
+    background-color: #d4b800;
 }
 
 #Home .arrow,
@@ -212,4 +218,220 @@ body {
         opacity: 0;
         transform: translate(-10px, -10px);
     }
+}
+
+#About-Us {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px 20px;
+    background-color: white;
+    height: 70vh;
+}
+
+#About-Us .content-about {
+    max-width: 600px;
+    text-align: center;
+}
+
+#About-Us .content-about img {
+    height: 110%;
+    width: auto;
+    margin-bottom: 60px;
+}
+
+#About-Us .content-about p {
+    font-size: 17px;
+    line-height: 2;
+    color: #000;
+}
+
+#Our-Services {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px 20px;
+    background-color: #f9f9f9;
+    width: 100vw;
+    text-align: center;
+}
+
+#Our-Services .content-services .top img {
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+#Our-Services .content-services .top h1 {
+    margin-bottom: 30px;
+    font-size: 25px;
+    color: #333;
+    letter-spacing: 8px;
+}
+
+#Our-Services .content-services .top p {
+    font-size: 15px;
+    color: #000;
+    text-align: center;
+}
+
+#Our-Services .content-services .cards-c-services {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    margin-top: 80px;
+}
+
+#Our-Services .content-services .cards-c-services .card-offer {
+    background-color: white;
+    padding: 20px;
+    box-shadow: 2px 5px 24px -11px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 2px 5px 24px -11px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 2px 5px 24px -11px rgba(0, 0, 0, 0.5);
+    width: 260px;
+    text-align: center;
+    height: 350px;
+}
+
+#Our-Services .content-services .cards-c-services .card-offer img {
+    padding-top: 40px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+#Our-Services .content-services .cards-c-services .card-offer h1 {
+    font-size: 15px;
+    letter-spacing: 5px;
+    text-align: center;
+}
+
+#Our-Services .content-services .cards-c-services .card-offer p {
+    margin-top: 30px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #000;
+    width: 230px;
+    text-align: center;
+}
+
+#Our-Services .content-services .cards-c-progressbars {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    margin-top: 30px;
+}
+
+#Our-Services .content-services .cards-c-progressbars .card-progresbars {
+    background-color: white;
+    padding: 0px 5px;
+    box-shadow: 2px 5px 24px -11px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 2px 5px 24px -11px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 2px 5px 24px -11px rgba(0, 0, 0, 0.5);
+    width: 260px;
+    text-align: center;
+    height: auto;
+    flex-direction: column;
+}
+
+#Our-Services .content-services .cards-c-progressbars .card-progresbars .progresbar {
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+#Our-Services .content-services .cards-c-progressbars .card-progresbars .progresbar h2 {
+    margin-bottom: 5px;
+    font-size: 15px;
+}
+
+#Our-Services .content-services .cards-c-progressbars .card-progresbars .progresbar .progres {
+    width: 100%;
+    height: 5px;
+    background-color: #f0f0f0;
+    border-radius: 20px;
+}
+
+#progres-fill-ps {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 90%;
+}
+
+#progres-fill-ai {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 98%;
+}
+
+#progres-fill-id {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 70%;
+}
+
+#progres-fill-ui {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 97%;
+}
+
+#progres-fill-ux {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 85%;
+}
+
+#progres-fill-responsive {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 90%;
+}
+
+#progres-fill-html {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 98%;
+}
+
+#progres-fill-css {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 98%;
+}
+
+#progres-fill-js {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 75%;
+}
+
+#progres-fill-cpp {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 85%;
+}
+
+#progres-fill-java {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 90%;
+}
+
+#progres-fill-swift {
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffe500;
+    width: 85%;
 }
