--- a/css/style.css
+++ b/css/style.css
@@ -569,7 +569,7 @@ body {
 
 #Portfolio .gallery img {
     height: 350px;
-    width: 250px;
+    width: 16.67vw;
     object-fit: cover;
     display: block;
 }
@@ -584,7 +584,7 @@ body {
     background-size: cover;
     background-position: center;
     height: 350px;
-    width: 250px;
+    width: 16.67vw;
 }
 
 #Portfolio .gallery .doe img {
@@ -652,7 +652,7 @@ body {
     background-size: cover;
     background-position: center;
     height: 300px;
-    width: 100%;
+    width: 100vw;
 }
 
 #Portfolio .portfolio-content .bottom a {
@@ -839,4 +839,130 @@ body {
     width: auto;
     height: 300px;
     filter: brightness(0.6);
+}
+
+footer {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding: 20px;
+    color: white;
+    background-color: #1a1a1a;
+    width: 100vw;
+    height: auto;
+    text-align: center;
+    background-color: #000;
+    margin-top: 50px;
+}
+
+footer .container-f {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 80vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
+}
+
+footer .container-f .left-f {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    text-align: left;
+    width: 20vw;
+}
+
+footer .container-f .left-f img {
+    height: 30px;
+    width: auto;
+    margin-bottom: 10px;
+}
+
+footer .container-f .left-f .graphberry {
+    color: #e6cf03;
+}
+
+footer .container-f .left-f p {
+    font-size: 14px;
+    line-height: 1.5;
+    color: white;
+}
+
+footer .container-f .right-f {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    text-align: left;
+    gap: 20px;
+    width: 20vw;
+}
+
+footer .container-f .right-f h1 {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+footer .container-f .right-f p {
+    font-size: 14px;
+    line-height: 1.5;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+footer .container-f .right-f a {
+    text-decoration: none;
+    padding: 10px;
+    background-color: orange;
+    color: #000;
+    font-size: 16px;
+    border-radius: 20px;
+    transition: color 0.2s ease;
+    width: 300px;
+    text-align: center;
+    font-weight: bold;
+}
+
+footer .container-f .right-f a:hover {
+    background-color: #e6cf03;
+    color: #333;
+}
+
+footer .container-f .right-f .socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+footer .container-f .right-f .socials img {
+    height: 25px;
+    width: auto;
+}
+
+footer .container-f .middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+    width: 20vw;
+}
+
+footer .container-f .middle h1 {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+footer .container-f .middle a {
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
 }
